# hidata

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
console/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
console/src/: App.js  App.tsx  main.js  main.tsx
console/src/api/: agent.js  agent.ts  providers.js  providers.ts
console/src/pages/Chat/: index.js  index.tsx
console/src/pages/Providers/: index.js  index.tsx
src/aishu_agent/: cli.py  llm.py  session.py
src/hidata/: cli.py  constant.py  llm.py  model_factory.py  session.py
src/hidata/agent/: prompt.py  react_agent.py  skills_manager.py
src/hidata/agent/hooks/: __init__.py  bootstrap.py  memory_compaction.py
src/hidata/agent/skills/cron/: SKILL.md
src/hidata/agent/skills/file_reader/: SKILL.md
src/hidata/agent/tools/: browser_control.py  get_current_time.py  send_file.py  shell.py
src/hidata/agent/utils/: tool_message_utils.py
src/hidata/app/: _app.py
src/hidata/app/routers/: __init__.py  providers.py
src/hidata/app/runner/: runner.py
src/hidata/cli/: __init__.py  app_cmd.py  main.py  relay_cmd.py
src/hidata/config/: config.py  util.py  utils.py
src/hidata/providers/: __init__.py  openai_chat_model_compat.py  openai_provider.py  provider.py  provider_manager.py
src/hidata/token_usage/: model_wrapper.py
src/hidata/utils/: logging.py
