[project]
name = "hidata"
version = "0.1.0"
description = "A simple interactive CLI agent that can answer continuously."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "agentscope==1.0.16.dev0",
  "agentscope-runtime==1.1.0",
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
  "typer>=0.12.3",
]

[project.scripts]
hidata = "hidata.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
